[package]
name = "chip8-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fixedbitset = "0.4.1"
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
web-sys = { version = "0.3.57", features = ["HtmlInputElement", "FileList", "File"] }

[profile.release]
opt-level = "s"
