[package]
name = "chip8-rust"
version = "0.1.0"
edition = "2021"
wasm-opt = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fixedbitset = "0.4.1"
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3.30"
wasm-bindgen-futures = "0.4.30"
console_error_panic_hook = { version = "0.1.6", enabled = true }
wee_alloc = { version = "0.4.5", optional = true }
web-sys = { version = "0.3.57", features = [
  "HtmlInputElement",
  "FileList",
  "File",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "Window",
  "Document",
  "KeyboardEvent"
] }
js-sys = "0.3.57"
hex = "0.4.3"
base64 = "0.13.0"

[profile.release]
opt-level = "s"
